align the tabs closer to the old markup to avoic compat issues

--- a/static/src/stylesheets/module/_tabs.scss
+++ b/static/src/stylesheets/module/_tabs.scss
@@ -46,8 +46,12 @@ category: Common
     list-style-type: none;
     overflow: hidden;
     z-index: 2;
-    background: $neutral-6;
-    border-top: 3px solid $neutral-6;
+    background: lighten($neutral-6, 5%);
+    table-layout: fixed;
+    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+    grid-column-gap: 2px;
+    display: table;
+    display: grid;
 
     @include mq(tablet) {
         margin-bottom: -1px;
@@ -59,11 +63,16 @@ category: Common
     float: left;
     margin: 0;
     border-bottom: 1px solid $neutral-5;
-    border-left: 2px solid rgba(255, 255, 255, .75);
-    margin-left: -2px;
+    border-top: 3px solid $neutral-6;
 
     @include mq(tablet) {
         max-width: gs-span(3);
+    }
+
+    &.tabs__tab--selected {
+        @include mq(desktop) {
+            border-bottom-color: #ffffff !important;
+        }
     }
 
     a,
@@ -72,25 +81,16 @@ category: Common
         display: block;
         box-sizing: border-box;
         min-height: $gs-row-height;
-        padding: $gs-baseline/3 8px 0;
+        padding: $gs-baseline/3 $gs-gutter/3.5 0;
         text-align: left;
         text-decoration: none;
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
-
-        &:active,
-        &:focus {
-            background-color: #ffffff;
-            text-decoration: none;
-        }
+        background: $neutral-6;
 
         @include mq($until: tablet) {
             font-size: 14px;
-        }
-
-        @include mq(tablet) {
-            padding: $gs-baseline/3 $gs-gutter/2 0;
         }
     }
 
@@ -98,17 +98,16 @@ category: Common
         color: inherit;
     }
 
-}
-
-.tabs__tab--selected {
-    a,
-    .tab__link {
-        background: #ffffff;
+    & a:active,
+    & a:focus,
+    & .tab__link:active,
+    & .tab__link:focus,
+    &.tabs__tab--selected a,
+    &.tabs__tab--selected .tab__link {
+        background-color: #ffffff;
+        text-decoration: none;
     }
 
-    @include mq(tablet) {
-        border-bottom-color: #ffffff !important;
-    }
 }
 
 .tabs__content {
@@ -141,16 +140,12 @@ category: Common
     width: 100%;
     margin: 0;
     margin-bottom: 10px;
-    table-layout: fixed;
-    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-    display: table;
-    display: grid;
 
     .tabs__tab {
         float: none;
         width: auto;
         max-width: 100%;
-        
+
         @include mq(tablet) {
             display: table-cell;
         }
@@ -166,6 +161,7 @@ category: Common
 // Most Popular FRONTS customisation: change layout to accommodate MPU (with or without tabs)
 .tabs--mostpop .tabs__content,
 .fc-slice--popular {
+
     @include mq(desktop) {
         display: table;
         display: flex;
